plugins{
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'jacoco'
}
allprojects {
    apply plugin: 'java'
    apply plugin: 'application'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'
    apply from: "${rootDir}/dependencies.gradle"
}
subprojects {
    group = 'com.muhammet'
    version = 'v.0.1'
    java{
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
    tasks.withType(JavaCompile).tap {
        configureEach {
            options.encoding = 'UTF-8'
        }
    }
    apply plugin: 'jacoco'
    jacoco {
        toolVersion = "${versions.jacoco}"
    }
}
allprojects {
    repositories {
        mavenCentral()
        google()
    }
    buildscript {
        repositories {
            mavenCentral()
        }
        dependencies {
            classpath("org.springframework.boot:spring-boot-gradle-plugin:${versions.springBoot}")
        }
    }
    dependencies {
        implementation libs.springBootStarterWeb
        implementation libs.swaggerui
        implementation libs.mapstruct

        testImplementation libs.springBootStarterTest
        testImplementation libs.junitApi
        testRuntimeOnly libs.junitEngine
        testImplementation libs.mockitoCore

    }
    test{
        useJUnitPlatform()
        finalizedBy jacocoTestReport
    }

}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = false
        html.required = true
    }
}
configurations {
    compileOnly{
        extendsFrom annotationProcessor
    }
}